--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
          location permissions for the 'MyLocation' functionality.
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -30,15 +29,16 @@
             </intent-filter>
         </activity>
         <activity android:name=".ElegirViaje" />
-        <activity android:name=".ViajesBuscados"/>
+        <activity android:name=".ViajesBuscados" />
         <activity android:name=".crearviaje" />
-
-
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps"/>
+            android:label="@string/title_activity_maps" />
         <activity android:name=".ViajesCreadosActivity" />
-        <activity android:name=".ReservasConductorActivity"/>
+        <activity android:name=".ReservasConductorActivity" />
+        <activity android:name=".ConductorActinity" />
+        <activity android:name=".PasajeroActivity" />
+        <activity android:name=".Registro"></activity>
     </application>
 
 </manifest>
