--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,8 @@
         <activity android:name=".ReservasConductorActivity" />
         <activity android:name=".ConductorActinity" />
         <activity android:name=".PasajeroActivity" />
-        <activity android:name=".Registro"></activity>
+        <activity android:name=".Registro" />
+        <activity android:name=".Registro2"></activity>
     </application>
 
 </manifest>
