--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,8 @@
         <activity android:name=".ConductorActinity" />
         <activity android:name=".PasajeroActivity" />
         <activity android:name=".Registro" />
-        <activity android:name=".Registro2"></activity>
+        <activity android:name=".Registro2" />
+        <activity android:name=".ViajesReservados"></activity>
     </application>
 
 </manifest>
