--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,7 @@
         <activity android:name=".Registro2" />
         <activity android:name=".AgregarParadas" />
         <activity android:name=".InicioPasajero" />
+        <activity android:name=".ViajesReservados"/>
         <activity android:name=".InicioConductorActivity"></activity>
     </application>
 
